--- a/platforms/android/assets/www/main/templates/home.html
+++ b/platforms/android/assets/www/main/templates/home.html
@@ -7,14 +7,14 @@
     </div>
     <div class="row">
       <ul class="list">
-        <li ng-click="changeState()" class="item item-image">
+        <li ng-click="changeState({{nearme}})" class="item item-image">
             <img class="area-img" src="./main/assets/images/nearme.jpg">
             <span class="area-text">NEAR ME</span>
         </li>
-        <li ng-click="changeState()" class="item item-image">
+        <li ng-click="changeState({{test}})" class="item item-image">
           <img class="area-img" src="./main/assets/images/ubud.jpg">
           <span class="area-text">UBUD</span>
-        <li ng-click="changeState()" class="item item-image">
+        <li ng-click="changeState({{test}})" class="item item-image">
           <img class="area-img" src="./main/assets/images/canggu.jpg">
           <span class="area-text">CANGGU</span>
         </li>
