--- a/platforms/ios/www/main/templates/menu.html
+++ b/platforms/ios/www/main/templates/menu.html
@@ -5,7 +5,7 @@
 
     <!-- header bar -->
     <!-- the nav bar will be updated as we navigate between views -->
-    <ion-nav-bar class="bar-energized">
+    <ion-nav-bar class="bar-stable">
       <!-- back button, shown if applicable -->
       <ion-nav-back-button>
       </ion-nav-back-button>
@@ -25,18 +25,24 @@
   <ion-side-menu side="left">
 
     <!-- menu header -->
-    <ion-header-bar class="bar-energized">
-      <h1 class="title">Nav</h1>
+    <ion-header-bar class="bar-stable">
+      <h1 class="title">Memorable menu</h1>
     </ion-header-bar>
 
     <!-- menu content -->
     <ion-content>
       <ion-list>
+        <ion-item menu-close ui-sref="main.home">
+          Home
+        </ion-item>
+        <ion-item menu-close ui-sref="main.categories">
+          Categories
+        </ion-item>
         <ion-item menu-close ui-sref="main.list">
-          List
+          My list
         </ion-item>
         <ion-item menu-close ui-sref="main.debug">
-          Debug
+          About us
         </ion-item>
       </ion-list>
     </ion-content>
