--- a/platforms/ios/www/main/templates/list-detail.html
+++ b/platforms/ios/www/main/templates/list-detail.html
@@ -1,14 +1,14 @@
-<ion-view view-title="Mr. Yo">
+<ion-view view-title="Canggu">
   <!-- do you want padding -->
   <ion-content class="padding">
 
     <!-- content goes here -->
-    <img ng-src="main/assets/images/yo@2x.png" style="width: 64px; height: 64px">
-    <p>
-      Hello My Name is Yo!<br>
-      I scaffold apps.<br>
-      And I'm really good at it.
-    </p>
+    <img ng-src="main/assets/images/canggu.jpg" class="full-image">
+    <p> Canggu is a beach area in South Bali, north of Seminyak and south of Tanah Lot. </p>
+
+    <h2 class="empty-state-h1">Reviews</h2>
+    <p> canggu is awesome </p>
+    <p> by New York Times </p>
 
   </ion-content>
 </ion-view>
