--- a/app/main/templates/list-detail.html
+++ b/app/main/templates/list-detail.html
@@ -7,8 +7,28 @@
     <p> Canggu is a beach area in South Bali, north of Seminyak and south of Tanah Lot. </p>
 
     <h2 class="empty-state-h1">Reviews</h2>
-    <p> canggu is awesome </p>
-    <p> by New York Times </p>
-
+    <ion-list>
+      <!-- <div class="card" ui-sref="main.listDetail">
+        <ion-item class="item item-text-wrap light-bg" type="item-text-wrap">
+                <p> Keeping it real in the heart of ritzy Apgujeong Rodeo St, this long-established no-frills Korean restaurant offers amazing-value, all-you-can-eat dishes, including great vegetarian options. For BBQ it's ₩18,000, but you'll need two people.</p>
+        </ion-item>
+        <ion-item class="item item-divider" type="item-text-wrap">
+            <p>
+              <a href="http://www.lonelyplanet.com/south-korea/seoul/restaurants/korean/ha-jun-min#ixzz3ypSMDHy3" class="subdued">by Lonely Planet</a>
+            </p>
+        </ion-item>
+      </div> -->
+      <div class="card" ui-sref="main.listDetail">
+        <ion-item class="item item-text-wrap light-bg" type="item-text-wrap">
+                <p> Keeping it real in the heart of ritzy Apgujeong Rodeo St, this long-established no-frills Korean restaurant offers amazing-value, all-you-can-eat dishes, including great vegetarian options. For BBQ it's ₩18,000, but you'll need two people.</p>
+        </ion-item>
+        <ion-item class="item item-divider" type="item-text-wrap">
+            <p>
+              <a href="http://www.lonelyplanet.com/south-korea/seoul/restaurants/korean/ha-jun-min#ixzz3ypSMDHy3" class="subdued">by Lonely Planet</a>
+            </p>
+        </ion-item>
+      </div>
+    </ion-list>
+    <div id="map" data-tap-disabled="true"></div>
   </ion-content>
 </ion-view>
